AC_INIT(ObexFS, 0.11, zany@triq.net)
#AC_CONFIG_SRCDIR(src/foo.c)
AM_INIT_AUTOMAKE
AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_INSTALL

PKG_CHECK_MODULES(OPENOBEX,openobex)
# PKG_CHECK_MODULES(OBEXFTP,obexftp)
AC_CHECK_LIB(obexftp, obexftp_open, [], AC_MSG_ERROR(ObexFTP library not found))
AC_CHECK_LIB(obexftp, obexftp_browse_bt, [], AC_MSG_ERROR(ObexFTP >=0.22 needed))

AC_OUTPUT([Makefile fuse/Makefile])
